<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whiteBrown">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/cofe_1000x735" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editTextUserPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/white"
        android:onClick="onClickCreateOrder"
        android:text="@string/button_create_order"
        android:textColor="@color/darkBrown"
        android:textSize="24sp" />
</LinearLayout>